# shlesha

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  BINDINGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DESIGN_DOCUMENT.md  DEVELOPMENT_PRINCIPLES.md  DEV_PRINCIPLES.md  Dockerfile.test  EXTENSIONS.md  MODULE_ARCHITECTURE.md  Makefile  OPTIMIZATION_DEEP_DIVE.md  OPTIMIZATION_JOURNEY.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE_1_OPTIMIZATION_RESULTS.md  PRESENTATION_SUMMARY.md  README.md  RELEASE.md  SANSKRIT_SCRIPT_COVERAGE.md  USAGE.md  VIDYUT_COMPARISON_ANALYSIS.md  WASM_FIX_SUMMARY.md  basic_notes.md  benchmark_all_tools.py  benchmark_comparison.py  benchmark_test  benchmark_test.rs  build.rs  debug_scripts.rs  (+22 more)
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
benches/: README.md  cli_benchmark.sh  compare_all.rs  compare_vidyut.rs  comparison.rs  comprehensive_benchmark.rs  comprehensive_comparison.rs  core_benchmarks.rs  extensibility_performance_benchmark.rs  fast_optimization_benchmark.rs  lossless_vs_vidyut.rs  profile_roman_processing.rs  profiling_benchmark.rs  runtime_vs_builtin_benchmark.rs  transliteration_bench.rs  vidyut_fair_comparison.rs  wasm_benchmark.html
benchmarks/: README.md  benchmark_python.py  precomputation_benchmark.py  precompute_python_benchmark.py  run_benchmarks.sh
docs/: ADDING_SCHEMAS.md  API_REFERENCE.md  BENCHMARKS.md  BENCHMARK_RESULTS_SUMMARY.md  CRATES_IO_RC_SUPPORT.md  CUSTOM_SCHEMAS.md  DOCUMENTATION_INDEX.md  EXTENDED_SCRIPTS.md  HYBRID_MAPPING_IMPLEMENTATION.md  MAPPING_DATA_MODULE_DESIGN.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PRECOMPUTATION_DESIGN.md  PROFILING.md  PYPI_SETUP.md  RECOMMENDED_SCHEMAS.md  RELEASE_SYSTEM.md  REPOSITORY_STRUCTURE.md  RUNTIME_SCHEMAS.md  SCHEMA_REFERENCE.md  SECURITY_SETUP.md  SHLESHA_VS_VIDYUT_DETAILED_ANALYSIS.md  TODO.md  VEDIC_ACCENTS.md  ci-cd.md
examples/: allocation_optimization_benchmark.rs  analyze_conversion_patterns.py  architecture_comparison.rs  basic_usage.rs  benchmark_wasm.html  cli.rs  compare_vidyut.rs  custom_encoding.yaml  debug_chars.rs  debug_direct_mapping.rs  direct_mapping_performance_test.rs  hub_vs_direct_benchmark.rs  indic_optimization_analysis.rs  investigate_performance_regression.rs  lossless_performance_demo.rs  precompute_wasm_benchmark.html  processor_optimization_benchmark.rs  profile_bottleneck.rs  profile_detailed.rs  profile_guided_optimization_demo.rs  profile_no_strings.rs  profile_optimized.rs  profile_simple.rs  profiler_cli.rs  roman_allocation_analysis.rs  roman_script_optimization_benchmark.rs  shlesha_vs_vidyut_benchmark.rs  string_allocation_analysis.rs  string_allocation_comparison.rs  test_comprehensive.rs  test_cross_token.rs  test_custom_schema.rs  test_iast.rs  test_new_scripts.rs  test_precompute_vs_no_precompute.py  test_runtime_schema_api.rs  test_runtime_schema_loading.rs  test_virama_fix.rs
mappings/: harvard_kyoto.toml  itrans.toml  metadata.toml  slp1.toml  velthuis.toml  wx.toml
python_benchmarks/: README.md  benchmark_comparison.py  benchmark_python.py  generate_benchmark_report.py
schemas/: abugida_tokens.yaml  alphabet_tokens.yaml  baraha.yaml  bengali.yaml  bhaiksuki.yaml  devanagari.yaml  devanagari.yaml.bak  devanagari_simplified.yaml  devanagari_tokens.yaml  dogra.yaml  grantha.yaml  gujarati.yaml  gurmukhi.yaml  harvard_kyoto.yaml  iast.yaml  iso15919.yaml  iso15919_tokens.yaml  itrans.yaml  kaithi.yaml  kannada.yaml  kolkata.yaml  malayalam.yaml  modi.yaml  nandinagari.yaml  newa.yaml  odia.yaml  sharada.yaml  siddham.yaml  sinhala.yaml  slp1.yaml  takri.yaml  tamil.yaml  telugu.yaml  thai.yaml  tibetan.yaml  velthuis.yaml  wx.yaml
scripts/: README.md  build-all.sh  check-tokens.sh  demo-python.sh  demo-wasm.sh  fix-wasm-target.sh  pre-release-check.sh  prepare-release.sh  publish-npm.sh  publish-pypi.sh  quick-start.sh  release.sh  run-benchmarks.sh  run-precompute-benchmarks.sh  run_performance_test.sh  setup-contributor.sh  setup-dev.sh  tag-release.sh  test-all.sh  test-precomputation.py  test-release.sh  test_local.sh  test_simple.py
src/: element_id.rs  generator.rs  generator_optimized.rs  generator_v2.rs  indic_phoneme.rs  ir.rs  ir_v2.rs  lib.rs  lossless_transliterator.rs  main.rs  parser.rs  parser_optimized.rs  parser_v2.rs  phoneme_parser.rs  python_bindings.rs  runtime_extension.rs  schema_parser.rs  script_mappings.rs  semantic_annotation.rs  simplified_schema.rs  transformer.rs  transformer_v2.rs  transliterator.rs  wasm_bindings.rs
templates/: direct_converter.hbs  hub_converter.hbs  indic_extended_converter.hbs  indic_standard_converter.hbs  roman_converter.hbs  roman_converter_aho_corasick.hbs  roman_to_devanagari_direct.hbs  token_based_converter.hbs  token_mappings.hbs  token_string_impls.hbs  token_traits.hbs  tokens.hbs
test_py311_env/: pyvenv.cfg
tests/: bijective_roundtrip_tests.rs  cli_integration_tests.rs  comprehensive_bidirectional_tests.rs  comprehensive_coverage_tests.rs  comprehensive_roundtrip_tests.rs  comprehensive_script_matrix_tests.rs  comprehensive_script_tests.rs  dynamic_script_discovery_tests.rs  exhaustive_pair_coverage_test.rs  full_matrix_tests.rs  ir_v2_tests.rs  (+19 more)
vedic_transliterator_rs/: Cargo.toml  build_python_module.py  generate_database.py
vedic_transliterator_rs/schemas/: devanagari.toml  slp1.toml
vedic_transliterator_rs/schemas/base/: devanagari.toml  iast.toml  iso15919.toml  slp1.toml  telugu.toml  vedavms_ascii.toml
vedic_transliterator_rs/schemas/sources/rigveda-shakala-vedanidhi/: devanagari.toml
vedic_transliterator_rs/schemas/sources/samaveda-kauthuma-vedanidhi/: devanagari.toml  devanagari_simplified.toml  iast.toml  slp1.toml  telugu.toml
vedic_transliterator_rs/schemas/sources/yajurveda-taittiriya-vedavms/: devanagari.toml
vedic_transliterator_rs/src/: compiler.rs  lib.rs  main.rs  python_bindings.rs  tokens.rs
vedic_transliterator_rs/src/tokens/: levels.rs
(+263 files in other folders)
