[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "shlesha"
description = "High-performance lossless transliteration library with 100% information preservation guarantee"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["transliteration", "indic", "sanskrit", "devanagari", "lossless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Localization",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/udapaana/shlesha"
Documentation = "https://docs.rs/shlesha"
Repository = "https://github.com/udapaana/shlesha.git"
Issues = "https://github.com/udapaana/shlesha/issues"

[tool.maturin]
features = ["python"]
module-name = "shlesha"
bindings = "pyo3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88