[package]
name = "vedic_transliterator"
version = "0.1.0"
edition = "2021"
description = "High-performance Vedic Sanskrit transliteration CLI tool"
license = "MIT"
authors = ["Udapaana Project"]

[[bin]]
name = "vedic_transliterator"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
once_cell = "1.19"
ahash = "0.8"
regex = "1.10"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
rayon = "1.8"
indicatif = "0.17"
colored = "2.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }